# RayTracing-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
RayTracing/: CMakeLists.txt  image.ppm  main.cpp
RayTracing/include/: Camera.h  Hittable.h  Material.h  MetalMaterial.h  Sphere.h  Utils.hpp  Vector3.hpp
RayTracing/src/: Camera.cpp  Lambertain.cpp  Ray.cpp  Sphere.cpp
include/: Camera.h  DielectricMaterial.h  Hittable.h  Lambertain.h  Material.h  Ray.h  Utils.hpp  Vector3.hpp
src/: Camera.cpp  DielectricMaterial.cpp  Hittable.cpp  Main.cpp  MetalMaterial.cpp  Ray.cpp  Sphere.cpp
